# Zeon-Src-Leaked

./: Procfile  README.md  main.py  mainbank.json  pyproject.toml
cogs/: JoinToCreateVc.py  VcRoles.py  Welcome.py  Welcome_event.py  Welcomes.py  errors.py  fun.py  fun_s.py  games.py  giveaway.py  help.py  leveling.py  logging.py  misc.py  moderation.py  music.py  owner.py  reactionroles.py  ready.py  ticket.py
cogs/utils/: config.py
core/: Flame.py
data/databases/: data.json  leveling.json
ext/: config.json
misc/: embeds.py  messages.py
views/: help.py
