[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
discord = ">=1.7.3"
pymongo = ">=3.12"
motor = ">=2.5.1"
aiohttp = ">=3.6.0"
jishaku = "^2.3.2"
requests = "^2.27.1"
youtube_dl = "^2021.12.17"
psutil = "^5.9.0"
lavalink = "^3.1.5"
wavelink = "^1.2.4"
spotipy = "^2.19.0"
ffmpeg = "^1.4"
Counter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"